--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<head>
 		<title>Aravind Ashok </title>
 		<meta charset="utf-8" />
+		<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/html5shiv.js"></script><![endif]-->
 		<link rel="stylesheet" href="assets/css/main.css" />
