--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 						<footer>
 							<ul class="icons">
 								<li><a href="#" class="fa-twitter">Twitter</a></li>
-								<li><a href="instagram.com/n1tr0maverick" class="fa-instagram">Instagram</a></li>
-								<li><a href="facebook.com/n1tr0maverick" class="fa-facebook">Facebook</a></li>
+								<li><a href="https://www.instagram.com/n1tr0maverick" class="fa-instagram">Instagram</a></li>
+								<li><a href="https://www.facebook.com/n1tr0maverick" class="fa-facebook">Facebook</a></li>
 							</ul>
 						</footer>
 					</section>
